// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css dedupes repeated styles 1`] = `".a{padding:16px}"`;

exports[`css inserts responsive styles 1`] = `".a{margin:8px}@media screen and (min-width:40em){.b{margin:16px}}"`;

exports[`css inserts styles to sheet 1`] = `".a{margin:16px}"`;

exports[`css parses flexbox styles 1`] = `".a{display:flex}.b{flex-wrap:wrap}.c{flex-direction:column}.d{flex:1 1 auto}.e{order:5}.f{align-items:center}.g{justify-content:space-between}"`;

exports[`css parses margin directions 1`] = `".a{margin:8px}.b{margin-top:8px}.c{margin-right:8px}.d{margin-bottom:8px}.e{margin-left:8px}"`;

exports[`css parses margins 1`] = `".a{margin:8px}.b{margin:-16px}.c{margin:24px}.d{margin:-24px}.e{margin:auto}"`;

exports[`css parses padding directions 1`] = `".a{padding:8px}.b{padding-top:8px}.c{padding-right:8px}.d{padding-bottom:8px}.e{padding-left:8px}"`;

exports[`css parses paddings 1`] = `".a{padding:8px}.b{padding:24px}.c{padding:20%}"`;

exports[`css parses widths 1`] = `".a{width:100%}.b{width:50%}.c{width:0%}.d{width:24px}.e{width:auto}"`;

exports[`react context 1`] = `
<div
  className="a b c"
/>
`;

exports[`react context 2`] = `".a{margin:6px}.b{width:100%}@media screen and (min-width:32em){.c{width:50%}}"`;

exports[`react context for reflex and fela provider 1`] = `
<div
  className="a b c"
/>
`;

exports[`react context for reflex and fela provider 2`] = `".a{margin:6px}.b{width:100%}@media screen and (min-width:32em){.c{width:50%}}"`;

exports[`snapshot 1`] = `
<div
  className=""
/>
`;

exports[`snapshot 2`] = `
<div
  className="a"
/>
`;

exports[`snapshot and fela provider 1`] = `
<div
  className=""
/>
`;

exports[`snapshot and fela provider 2`] = `
<div
  className="a"
/>
`;
